<resources>
    <string name="app_name">FitCheck</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="add_challenge">Add Challenge</string>
    <string name="challenge_days">Challenge days</string>
    <string name="add_starting_measurements"> Add Starting Measurements</string>
    <string name="add">ADD</string>
    <string name="waist">Waist</string>
    <string name="thigh">Thigh</string>
    <string name="cancel">CANCEL</string>
    <string name="days_left"> days left</string>
    <string name="title_activity_measurements">Measurements</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>